--- a/sass/utilidades/_cartanatal.scss
+++ b/sass/utilidades/_cartanatal.scss
@@ -36,6 +36,7 @@
         width: 40rem;
         padding: 5rem;
         transition: transform 0.2s;
+        box-shadow: 0px 15px 25px rgb(3, 1, 38);
         h2{
             margin-bottom: 3rem;
         }
